Change logic for detecting whether two loads with the same URI (up to anchor) are actually different to be smarter about dealing with postdata (both loads may have postdata and may be the same or different depending on what that post data is).  Bug 227554, r=adamlock, sr=darin